<resources>
    <string name="app_name">MONOPDroid</string>
    <string name="title_activity_server_list">Monopoly</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_board">%s</string>
    <string name="menu_refresh">Refresh list</string>
    <string name="menu_bankrupt">Declare bankruptcy</string>
    <string name="menu_descr">Set game description</string>
    <string name="menu_save_cfg">Save current game configuration</string>
    <string name="menu_load_cfg">Use saved game configuration</string>
    <string name="menu_name">Set name</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quit">Leave game</string>
    <string name="game_list_ready">Tap to get game list</string>
    <string name="game_list_create">Tap to create new game</string>
    <string name="game_list_loading">Fetching list&#8230;</string>
    <string name="game_list_empty">Nothing listed (tap to retry)</string>
    <string name="game_list_error">Error occurred (tap to retry)</string>
    <string name="dialog_server_info">Information for %s</string>
    <string name="dialog_list_error">Error fetching list</string>
    <string name="dialog_conn_error">Connection error</string>
    <string name="dialog_enter_bid">Enter an amount to bid</string>
    <string name="dialog_choose_tradetype">Choose a thing to trade</string>
    <string name="dialog_choose_trademoney">Enter an amount to trade</string>
    <string name="dialog_choose_tradeestate">Choose an estate to trade</string>
    <string name="dialog_choose_tradecard">Choose a card to trade</string>
    <string name="dialog_choose_tradeplayerfrom">Choose a sending player</string>
    <string name="dialog_choose_tradeplayerto">Choose a receiving player</string>
    <string name="dialog_confirm_quit">Leaving game</string>
    <string name="enter_custom_bid_amount">How much do you want to bid? It must be more than $%d.</string>
    <string name="choose_tradetype">What type of thing should be traded?</string>
    <string name="choose_trademoney">What amount of money should be traded?</string>
    <string name="confirm_quit">Are you sure you want to leave this game?</string>
    <string name="empty"></string>
    <string name="empty_chat_hint">Chat with other players</string>
    <string name="empty_dialog_prompt_name">Enter a name</string>
    <string name="empty_dialog_prompt_money">Enter a money amount</string>
    <string name="empty_dialog_prompt_objectlist_player"><i>There are no valid players for this action.</i></string>
    <string name="empty_dialog_prompt_objectlist_estate"><i>Nobody owns any estates at this time.</i></string>
    <string name="empty_dialog_prompt_objectlist_card"><i>Nobody owns any cards at this time.</i></string>
    <string name="reconnect">Reconnect</string>
    <string name="quit">Quit</string>
    <string name="previous_step">Previous step</string>
    <string name="pref_player_nick_title">Nickname</string>
    <string name="pref_player_nick_summary">Change the nickname that other users will see you as.</string>
    <string name="pref_player_nick_dialog_title">Change nickname</string>
    <string name="pref_game_descr_title">Game description</string>
    <string name="pref_game_descr_summary">Change the game description..</string>
    <string name="pref_game_descr_dialog_title">Change game description</string>
    <string name="pref_gamelist_server_title">List server</string>
    <string name="pref_gamelist_server_summary">The server the retrieve the game list from.</string>
    <string name="pref_gamelist_server_dialog_title">Set list server</string>
    <string name="pref_gamelist_port_title">List server port</string>
    <string name="pref_gamelist_port_summary">The TCP port to use.</string>
    <string name="pref_gamelist_port_dialog_title">Set list server port</string>
    <string name="pref_gamelist_auto_title">Automatically fetch list</string>
    <string name="pref_gamelist_auto_summary">If this is set, when the game list is brought to the foreground, the list will automatically be fetched.</string>
    <string name="pref_gameboard_autoroll_title">Automatically roll the dice</string>
    <string name="pref_gameboard_autoroll_summary">If this is set, when it becomes your turn to roll the dice, you will roll the dice after two seconds.</string>
    <string name="pref_gameboard_timestamps_title">Show chat timestamps</string>
    <string name="pref_gameboard_timestamps_summary">If this is set, messages and information in the chat window will be prefixed with timestamps.</string>
</resources>
